9 November 2007: Wouter
	- took ldns snapshot in repo.
	- default config file is /etc/unbound/unbound.conf.
	  If it doesn't exist, it is installed with the doc/example.conf file.
	  The file is not deleted on uninstall.
	- default listening is not all, but localhost interfaces.
	
8 November 2007: Wouter
	- Fixup chroot and drop user privileges.
	- new L root ip address in default hints.

1 November 2007: Wouter
	- Fixup of crash on reload, due to anchors in env not NULLed after
	  dealloc during deinit.
	- Fixup of chroot call. Happens after privileges are dropped, so
	  that checking the passwd entry still works.
	- minor touch up of clear() hashtable function.
	- VERB_DETAIL prints out what chdir, username, chroot is being done.
	- when id numbers run out, caches are cleared, as in design notes.
	  Tested with a mock setup with very few bits in id, it worked.
	- harden-dnssec-stripped: yes is now default. It insists on dnssec
	  data for trust anchors. Included tests for the feature.

31 October 2007: Wouter
	- cache-max-ttl config option.
	- building outside sourcedir works again.
	- defaults more secure:
		username: "unbound"
		chroot: "/etc/unbound"
	  The operator can override them to be less secure ("") if necessary.
	- fix horrible oversight in sorting rrset references in a message,
	  sort per reference key pointer, not on referencepointer itself.
	- pidfile: "/etc/unbound/unbound.pid" is now the default.
	- tests changed to reflect the updated default.
	- created hashtable clear() function that respects locks.

30 October 2007: Wouter
	- fixup assertion failure that relied on compressed names to be
	  smaller than uncompressed names. A packet from comrite.com was seen
	  to be compressed to a larger size. Added it as unit test.
	- quieter logging at low verbosity level for common tcp messages.
	- no greedy TTL update.

23 October 2007: Wouter
	- fixup (grand-)parent problem for dnssec-lameness detection.