@@ -1,3 +1,7 @@
+12 November 2007: Wouter
+	- fixup signal handling where SIGTERM could be ignored if a SIGHUP
+	  arrives later on.
+
 9 November 2007: Wouter
 	- took ldns snapshot in repo.
 	- default config file is /etc/unbound/unbound.conf.
